resolve overflow on Misc page

--- a/src/pages/Misc.css
+++ b/src/pages/Misc.css
@@ -35,6 +35,7 @@
     );
     z-index: -1;
     filter: blur(90px);
+    overflow-x: hidden;
 }
 .soundcloud-frame {
   display: flex;
